@@ -1,14 +1,14 @@
 package com.example.despegarbackend.controller;
 
-import com.example.despegarbackend.controller.dto.UsuarioDTO;
+import com.example.despegarbackend.dto.UsuarioDTO;
 import com.example.despegarbackend.model.Usuario;
 import com.example.despegarbackend.service.UsuarioService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/usuarios")
@@ -19,31 +19,19 @@ public class UsuarioController {
     private UsuarioService service;
 
     @GetMapping
-    public ResponseEntity<List<UsuarioDTO>> getAll() {
-        List<UsuarioDTO> lista = service.listarUsuarios().stream().map(usuario -> {
-            UsuarioDTO dto = new UsuarioDTO();
-            dto.setId(usuario.getId());
-            dto.setNombre(usuario.getNombre());
-            dto.setPerfil(usuario.getPerfil());
-            return dto;
-        }).collect(Collectors.toList());
-
-        return ResponseEntity.ok(lista);
+    public ResponseEntity<List<UsuarioDTO>> getAllUsuarios() {
+        List<UsuarioDTO> usuarios = service.listarUsuarios().stream()
+                .map(UsuarioDTO::desdeModelo)
+                .toList();
+        return ResponseEntity.status(HttpStatus.OK).body(usuarios);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<UsuarioDTO> getById(@PathVariable Long id) {
+    public ResponseEntity<?> getUsuarioById(@PathVariable Long id) {
         Usuario usuario = service.usuarioPorId(id);
-
-        if (usuario == null) {
-            return ResponseEntity.notFound().build();
+        if (usuario != null) {
+            return ResponseEntity.status(HttpStatus.OK).body(UsuarioDTO.desdeModelo(usuario));
         }
-
-        UsuarioDTO dto = new UsuarioDTO();
-        dto.setId(usuario.getId());
-        dto.setNombre(usuario.getNombre());
-        dto.setPerfil(usuario.getPerfil());
-
-        return ResponseEntity.ok(dto);
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Usuario no encontrado.");
     }
 }
